[package]
name = "rsdb"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
rustyline = "15.0"

[lib]
name = "librsdb"
path = "src/lib.rs"

[[bin]]
name = "rsdb"
path = "src/main.rs"

[[bin]]
name = "run_endlessly"
path = "src/support/run_endlessly.rs"

[[bin]]
name = "end_immediately"
path = "src/support/end_immediately.rs"
